hphp/hack/test/typecheck/records/record_instance_missing_declaration.php
<?hh


function foo(): void {
  $bar = NoSuchRecord['x' => 1];
  $baz = NoSuchRecord@['x' => 1];
}
